# rpa_get_started

./: .gitignore  README.md  code-gist.md  config.json  pyproject.toml  rpa_run.sh
src/: main.py
src/auto_login_rpa/: config.py  login_bot.py
