[tool.poetry]
name = "auto-login-rpa"
version = "0.1.0"
description = ""
authors = ["Falak Gala <falakgala09@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.27.1"
python-dotenv = "^1.0.1"
webdriver-manager = "^4.0.2"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
